force-app/main/default/objects/PC_Shift__c/PC_Shift__c.object-meta.xml
<CustomObject>
    <description>Object to provide the ability to create shifts from the service record page that can be added to the service&apos;s schedule.</description>
    <label>PrC Shift</label>
    <nameField>
        <displayFormat>S-{000}</displayFormat>
        <label>Shift</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PrC Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>