force-app/main/default/objects/PC_Shift__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <formula>PC_Service_Team_Member__r.PC_Service_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Name</label>
    <type>Text</type>
</CustomField>