force-app/main/default/objects/PC_Shift__c/fields/PC_Service__c.field-meta.xml
<CustomField>
    <fullName>PC_Service__c</fullName>
    <label>Service</label>
    <referenceTo>PC_Service__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>