force-app/main/default/objects/PC_Shift__c/fields/PC_Service_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>PC_Service_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Team Member</label>
    <referenceTo>PC_Service_Team_Member__c</referenceTo>
    <relationshipLabel>Shifts</relationshipLabel>
    <relationshipName>Shifts</relationshipName>
    <type>Lookup</type>
</CustomField>