force-app/main/default/objects/PC_Shift__c/fields/PC_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>PC_Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>