force-app/main/default/objects/PC_Shift__c/listViews/All_Shifts.listView-meta.xml
<ListView>
    <fullName>All_Shifts</fullName>
    <columns>NAME</columns>
    <columns>PC_Service__c</columns>
    <columns>PC_Service_Team_Member__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Shifts</label>
</ListView>